--- a/arch/arm64/configs/phoenix_defconfig
+++ b/arch/arm64/configs/phoenix_defconfig
@@ -4920,6 +4920,7 @@ CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=2597
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_EXTCON=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 
 #
 # Extcon Device Drivers
