--- a/arch/arm64/configs/phoenix_defconfig
+++ b/arch/arm64/configs/phoenix_defconfig
@@ -173,6 +173,13 @@ CONFIG_NAMESPACES=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="0-3,6-7"
+CONFIG_CPUSET_BG="4-5"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_RESTRICTED="2-5"
+CONFIG_CPUSET_SYSTEM_BG="2-5"
+CONFIG_STUNE_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
